--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Аква ферма майбютнього</title>
   </head>
@@ -35,8 +36,18 @@
     </header>
 
     <main class="main">
-
-
+        <div class="container">
+            <div class="row">
+                <h3 class="text-center">Наше приемущество</h3>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <div class="">
+                        <i class="fa fa-pagelines"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- Optional JavaScript -->
