--- a/index.html
+++ b/index.html
@@ -17,43 +17,56 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
-                    <h1 class="text-center">AquaCity</h1>
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <h1>fgdhghgfhf</h1>
+                        <h1>fgdhghgfhf</h1>
+                    </div>
                 </div>
                 <div class="col-lg-2">
                     <a href="#"><img src="img/logo200.png" class="rounded mx-auto d-block" alt="logo"></a>
                 </div>
                 <div class="col-lg-5">
-                    <h2 class="text-center">Аква ферма майбютнього</h2>
+                    <h4>З червонои кніги до вашего столу</h4>
+                    <div>Социальные сети</div>
                 </div>
             </div>
         </div>
     </div>
-    <header class="header">
+    <header class="header d-flex flex-column justify-content-center align-items-center">
         <div class="container">
-            <h1><p>AquaCity</p></h1>
-            <h1><p>Аква ферма майбютнього</p></h1>
+
+            <h1>Аква ферма майбютнього</h1>
         </div>
     </header>
 
     <main class="main">
         <div class="container">
             <div class="row d-flex justify-content-center">
-                <h3>Наши приемущества</h3>
+                <h3>О КОМПАНИИ</h3>
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="d-flex justify-content-center">
-                        <h4>Дешиво</h4>
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="img/modern286x180.png" alt="Card image cap">
+                      <div class="card-body">
+                        <p class="card-text">Сучасный аквакультурный комплекс</p>
+                      </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="d-flex justify-content-center">
-                        <h4>Сердито</h4>
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="img/modern286x180.png" alt="Card image cap">
+                      <div class="card-body">
+                        <p class="card-text">Сучасный аквакультурный комплекс</p>
+                      </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="d-flex justify-content-center">
-                        <h4>Красиво</h4>
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="img/modern286x180.png" alt="Card image cap">
+                      <div class="card-body">
+                        <p class="card-text">Сучасный аквакультурный комплекс</p>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -65,18 +78,36 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="d-flex justify-content-center">
-                        <h4>Осетр</h4>
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="img/osetr.png" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Осетер</h5>
+                        <p class="card-text">ціна: до 2кг. - 195грн./кг.</p>
+                        <p class="card-text">2-5кг. - 275грн./кг.</p>
+                        <a href="#" class="btn btn-primary">Замовити</a>
+                      </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="d-flex justify-content-center">
-                        <h4>Стерлядь</h4>
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="img/osetr.png" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Осетер</h5>
+                        <p class="card-text">ціна: до 2кг. - 195грн./кг.</p>
+                        <p class="card-text">2-5кг. - 275грн./кг.</p>
+                        <a href="#" class="btn btn-primary">Замовити</a>
+                      </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="d-flex justify-content-center">
-                        <h4>Карп</h4>
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="img/osetr.png" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Осетер</h5>
+                        <p class="card-text">ціна: до 2кг. - 195грн./кг.</p>
+                        <p class="card-text">2-5кг. - 275грн./кг.</p>
+                        <a href="#" class="btn btn-primary">Замовити</a>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -85,6 +116,7 @@
 
     <div class="zakaz">
         <div class="container">
+            Заказать продукцию
                 <form action="http://postmail.invotes.com/send"
                     method="post" id="email_form">
                     <input type="text" name="subject" placeholder="Subject" />
@@ -96,10 +128,11 @@
                 </form>
         </div>
     </div>
-
-    <div class="gallery">
-        <h1>Галерея</h1>
-    </div>
+    <footer class="footer">
+        <div class="container">
+            <h3>Контакты</h3>
+        </div>
+    </footer>
 
 
 
