--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="card" style="width: 18rem;">
-                      <img class="card-img-top" src="img/modern286x180.png" alt="Card image cap">
+                      <img class="card-img-top" src="img/baseyn286x180.png" alt="Card image cap">
                       <div class="card-body">
-                        <p class="card-text">Сучасный аквакультурный комплекс</p>
+                        <p class="card-text">Био басейны с живой рыбой</p>
                       </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="card" style="width: 18rem;">
-                      <img class="card-img-top" src="img/modern286x180.png" alt="Card image cap">
+                      <img class="card-img-top" src="img/osetroviy_karp286x180.png" alt="Card image cap">
                       <div class="card-body">
                         <p class="card-text">Сучасный аквакультурный комплекс</p>
                       </div>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="card" style="width: 18rem;">
-                      <img class="card-img-top" src="img/osetr.png" alt="Card image cap">
+                      <img class="card-img-top" src="img/sterlyad.png" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Осетер</h5>
                         <p class="card-text">ціна: до 2кг. - 195грн./кг.</p>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="card" style="width: 18rem;">
-                      <img class="card-img-top" src="img/osetr.png" alt="Card image cap">
+                      <img class="card-img-top" src="img/karp.png" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Осетер</h5>
                         <p class="card-text">ціна: до 2кг. - 195грн./кг.</p>
