--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="d-flex flex-column justify-content-center align-items-center">
-                        <h1>fgdhghgfhf</h1>
-                        <h1>fgdhghgfhf</h1>
+                        <h1>Аква ферма майбутнего</h1>
+                        <h1>Аквасити</h1>
                     </div>
                 </div>
                 <div class="col-lg-2">
@@ -35,7 +35,7 @@
     <header class="header d-flex flex-column justify-content-center align-items-center">
         <div class="container">
 
-            <h1>Аква ферма майбютнього</h1>
+            <!--<h1>Аква ферма майбютнього</h1>-->
         </div>
     </header>
 
@@ -131,6 +131,7 @@
     <footer class="footer">
         <div class="container">
             <h3>Контакты</h3>
+
         </div>
     </footer>
 
